Refactors the login route
